# feishu-mcp-server

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  SUPERVISOR_REPORT.md  feishu-bot.service  pyproject.toml  run-bot.sh  run-supervisor.sh
src/feishu_mcp/: __main__.py  auth.py  bot.py  server.py  utils.py
src/feishu_mcp/tools/: bitable.py  calendar.py  contact.py  docs.py  drive.py  im.py
src/supervisor/: __init__.py  __main__.py  action_handlers.py  claude_session.py  command_handlers.py  container_monitor.py  conversation_monitor.py  feishu_gateway.py  main.py  notification.py  patterns.py  prompt_builders.py  route_parser.py  router_skill.py  scheduler.py  session_monitor.py  subprocess_runner.py  task_dispatcher.py  task_formatting.py  task_persistence.py  task_queries.py  task_state.py
tests/: test_claude_session.py  test_container_monitor.py  test_conversation_monitor.py  test_drive_security.py  test_e2e_refactor_integration.py  test_feishu_gateway.py  test_module_edge_cases.py  test_orchestrator.py  test_p0_smart_close.py  test_p0_thread_safety.py  test_p0_timeout.py  test_recover_command.py  test_restart_recovery.py  test_router_skill.py  test_scheduler.py  test_session_monitor.py  test_supervisor_main.py  test_task_dispatcher.py  test_utils.py
