[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-mcp-server"
version = "0.1.0"
description = "Feishu/Lark MCP Server for Claude Code - messaging, docs, drive, calendar, contacts, bitable"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claude Code" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.0.0",
    "lark-oapi>=1.4.0",
    "psutil>=5.9.0",
    "watchdog>=3.0.0",
]

[project.urls]
Repository = "https://github.com/anthropics/feishu-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_mcp", "src/supervisor"]

[project.scripts]
feishu-mcp = "feishu_mcp.server:main"
feishu-bot = "feishu_mcp.bot:main"
feishu-supervisor = "supervisor.main:main"
